# pedersen-bench

./: .gitignore  Cargo.toml  README.md  js-bench.ts  package.json  tsconfig.json  webpack.config.ts
benches/: pedersen_hash.rs
scripts/: build_bench_wasm.sh  run_bench_wasm.sh
